fix: 메모 요청 DTO를 nested 구조로 수정